syntax = "proto3";

// protoc --go_out=plugins=grpc:. *.proto
// ls *.pb.go | xargs -n1 -IX bash -c "sed -e '/uint64/ s/,omitempty//' X > X.tmp && mv X{.tmp,}"

package models;

message UserProto {
    uint64 ID = 1;
    string login = 2;
    string email = 3;
    string password = 4;
    string hashPassword = 5;
    uint64 score = 6;
    string picture = 7;
    uint64 games = 8;
}

message JWT {
    string token = 1;
}

message Nothing {}

service AuthChecker {
    rpc LoginUser (UserProto) returns (JWT) {}
    rpc RegisterUser (UserProto) returns (JWT) {}
    //GetUser() also checks JWT. If token if invalid, nil will be returned.
    rpc GetUser (JWT) returns (UserProto) {}
    rpc ChangeUser (UserProto) returns (Nothing) {}
    rpc DeleteUser (JWT) returns (Nothing) {}
}